# OnlyPump

./: .gitignore  BACKEND_ARCHITECTURE.md  DEVNET_SETUP.md  DEVNET_TESTING.md  FRONTEND_INTEGRATION.md  FRONTEND_ONLYPUMP_PROMPT.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION.md  NESTJS_BACKEND.md  NESTJS_PRESALE_NEXT_STEPS.md  NEXT_STEPS.md  POSTMAN_TESTING_GUIDE.md  PRESALE_FLOW.md  QUICK_START_POSTMAN.md  README.md  SUPABASE_QUICKSTART.md  TROUBLESHOOTING.md  WALLET_AUTH_GUIDE.md  env.example  nest-cli.json  package.json  supabase-migration.sql  tsconfig.json
docs/: FRONTEND_ERROR_HANDLING.md  FRONTEND_SLIPPAGE_GUIDE.md  QUICK_FRONTEND_SUMMARY.md  SUPABASE_SETUP.md  TESTING_TRADE_LIMITS.md  TRADE_LIMITS.md  frontend-integration.md
frontend/: next.config.js  package.json
onlypump-presale/: Anchor.toml
onlypump-presale-backup/: Anchor.toml  Cargo.toml  DEPLOYMENT_GUIDE.md  IMPLEMENTATION_NOTES.md  QUICK_START.md  TROUBLESHOOTING.md  install-solana-tools.sh  package.json
onlypump-presale-backup/programs/: Cargo.toml
onlypump-presale-backup/programs/src/: lib.rs
onlypump-presale-backup/programs/src/instructions/: claim_tokens.rs  contribute_public.rs  fund_presale_tokens.rs  migrate_and_create_lp.rs
onlypump-presale-backup/programs/src/state/: accounts.rs
onlypump-presale/programs/onlypump_presale/: Cargo.toml
scripts/: generate-signature.js  generate-signature.ts  generate-vanity-keypairs.js  test-buy-and-sell.js  test-buy.js  test-create-and-buy.js  test-sell.js  test-signature.js  verify-devnet-setup.js
src/: app.module.ts  main.rs  main.ts
(+166 files in other folders)
